<resources>
    <string name="app_name">!</string>
    <string name="action_settings">Settings</string>
    <string name="on_boarding">Onboarding</string>
    <string name="question1">Need help?</string>
    <string name="question2">What?</string>
    <string name="question3">Why?</string>
    <string name="description1">If you or someone you care about is dealing with mental illness, we’re here to help. NFS is a safe place to find the help you need whenever you decide to seek it.</string>
    <string name="description2">NFS is a platform made to spread awareness about mental health and connect patients with therapists. Whether you want to locate a specific type of therapist, read articles, or access helplines, NFS is the app for you. </string>
    <string name="description3">Our purpose is to fulfill psychiatric needs and create a knowledge base and network for the psychiatry and psychology community. </string>
    <string name="skip">Skip</string>
    <string name="singUp">Sign Up</string>
    <string name="login">Login</string>
    <string name="login_space">Log In</string>
    <string name="password">Password</string>
<!--    <string name="email">Email</string>-->
    <string name="username">Username</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="noAccount">Don\'t have an account?sign up!</string>
    <string name="sendPassword">Send Password</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="welcome">Welcome</string>
    <string name="search">Search</string>
    <string name="searchBar">Search...</string>
    <string name="doctorsTitle">Doctors</string>
    <string name="appointments">Appointments</string>
    <string name="accountSettings">Account Settings</string>
    <string name="faqs">FAQs</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="aboutNfs">About Nfs</string>
    <string name="home">Home</string>
    <string name="helpLine">Help Line</string>
    <string name="shop">Shop</string>
    <string name="user">Abdallah</string>
    <string name="newIn">New in</string>
    <string name="logOut">Log Out</string>
    <string name="psychology">Psychology</string>
    <string name="psychiatry">Psychiatry</string>
    <string name="blog">Blog</string>
    <string name="alternative_healing">Alternative Healing</string>
    <string name="behavioral_therapy">Behavioral Therapy</string>
    <string name="allDoctors">View All Doctors</string>
    <string name="allArticles">View All Articles</string>
    <string name="allProducts">View All Products</string>
    <string name="articles">Articles</string>
    <string name="check">Check</string>
    <string name="helpLines">Help Lines</string>
    <string name="weAreHereToHelp">We are here to help</string>
    <string name="checkOur">Check our</string>
    <string name="books">Books</string>
    <string name="toys">Toys</string>
    <string name="map_key" translatable="false">AIzaSyCen1S_fKDTTjM5qxRX-hr51NlSdBPS4Ik</string>

    <string name="viewToys">View All Toys</string>
    <string name="viewBooks">View All Books</string>
    <string name="articleContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam nulla porttitor massa id. Ultricies leo integer malesuada nunc vel risus commodo viverra.

Euismod elementum nisi quis eleifend. Donec pretium vulputate sapien nec. Aliquet lectus proin nibh nisl condimentum id venenatis a condimentum. Tortor aliquam nulla facilisi cras fermentum odio.

Gravida neque convallis a cras semper auctor neque vitae. Feugiat nisl pretium fusce id velit. Et netus et malesuada fames ac turpis egestas. Pellentesque habitant morbi tristique senectus et netus et malesuada fames.

Sapien faucibus et molestie ac feugiat. Est placerat in egestas erat imperdiet sed euismod. Sem nulla pharetra diam sit amet. Tristique magna sit amet purus gravida quis blandit turpis cursus.</string>


    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="checkout">Checkout</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="meebie_for_play_emotional_expression"><![CDATA[Meebie - For Play & Emotional Expression]]></string>
    <string name="bookmarked">Bookmarked</string>

    <string-array name="home_searchables">
        <item>Shop</item>
        <item>Appointments</item>
        <item>Articles</item>
        <item>Help Lines</item>
        <item>Book Marks</item>
        <item>Doctors</item>
    </string-array>
    <string-array name="timings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="AMPM">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string name="title_activity_sign_up_confirm">SignUpConfirmActivity</string>
    <string name="confirm_signup">Confirm Sign Up</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="about">NFS” (pronounced Nafis) means ‘the self’ in Arabic, which is the most important thing, looking out for yourself. During emergency landings in an airplane, you first place the oxygen mask on yourself before assisting others. To help others and be a contributing member to society, you must first help yourself.
NFS is an all-inclusive domain for everything Bahrain (and the rest of the Middle East) has to offer in terms of mental health; whether it’s locating a specific type of therapist, reading articles, locating helplines, donating to charities, purchasing books and journals, and more. It is a safe and accessible space for people to enhance their ‘NFS’ mentally, spiritually, and physically. It is a start to the path of self enhancement, and enlightenment. Let us help you be your change.</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="this_content_is_not_intended_to_be_a_substitute_for_professional_medical_advice_diagnosis_or_treatment">*This content is not intended to be a substitute for professional medical advice, diagnosis, or treatment.</string>
    <string name="click_here_to_view">Click here to view</string>
    <string name="cancel">Cancel</string>
    <string name="select_photo">Select Photo</string>
    <string name="select_monster">Select Monster</string>
    <string name="description_of_abuser">It is a lot more than just being physical.
•	Control abuse
•	Mental abuse
•	Emotional abuse
•	Verbal abuse

Abuse does not just occur from your significant other, family members (extended and not extended), friends and strangers.

Domestic Abuse from a significant other (spouse, fiancée &amp; boyfriend/girlfriend):

These traits puts women at risk of ‘Separation Assault’. Over 70% of women who are injured in domestic violence cases were injured after separation from their abuser. Danger zone peaks within first 2-3 weeks.

9 warning signs of an abuser
1.	Quick involvement in a relationship
2.	Extreme jealousy
3.	Controlling behaviour
4.	Threats of violence
5.	Abrupt mood changes
6.	Verbal abuse
7.	Breaking objects
8.	Use of force during an argument
9.	History of past battering

FIVE different types of abuse
•	Physical Abuse: Any intentional use of physical force with the intent to control a partner through fear or injury.
•	Emotional/Verbal Abuse: An attempt to control a partner through the manipulation of their self-esteem, sense of personal security, relationships with others, and/or their perception of reality. Often it results in the victim feeling worthless and responsible for the abuse.
•	Sexual Abuse: Any behaviors that impact a person’s ability to control their sexual activity or the circumstances in which sexual activity occurs
•	Digital Abuse: This is a form of emotional/verbal abuse that uses technology or social media to intimidate, harass, bully, stalk or threaten a current or ex-partner.
•	Financial Abuse: The use of finances or access to finances to control a partner. It’s one of the powerful forms of abuse, and common method of entrapping a partner in the relationship. It’s often given as the reason that victims of abuser stayed in or returned to an abusive relationship.
</string>
    <string name="about_nfs">About Nfs</string>
    <string name="contact_us">Contact Us</string>
    <string name="report_bug_text">Contact us through our support email to report any bug in the app.</string>
<!--    <string name="book_appointment">Book Appointment</string>-->
    <string name="report_a_problem">Report a problem</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="overview">Overview</string>
    <string name="contact">Contact</string>
    <string name="reviews">Reviews</string>
    <string name="about_title">About</string>
    <string name="education">Education</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="chat">Chat</string>
    <string name="write_a_review">Write a review</string>
    <string name="experience">Experience</string>
</resources>
