<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:fontFamily="@font/poppins_regular">

    <item android:id="@+id/helpLinesFragment"
        android:icon="@drawable/phone"
        android:title="@string/helpLine"
        app:showAsAction="always"
        android:orderInCategory="1"/>

    <item android:id="@+id/comingSoon"
        android:icon="@drawable/shop"
        android:title="@string/shop"
        app:showAsAction="always"
        android:orderInCategory="2"/>

    <item android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="always"
        android:orderInCategory="3"/>

    <item android:id="@id/appointmentsFragment"
        android:icon="@drawable/appointment"
        android:title="@string/appointments"
        app:showAsAction="always"
        android:orderInCategory="4"/>
<!--    you can use group modifier to set boundaries -->

</menu>